--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -29,8 +29,8 @@
   <meta name="twitter:image" content="{{url}}modules/core/img/brand/logo.png">
 
   <!-- Fav Icon -->
-  <link href="{{url}}{{favicon}}" rel="shortcut icon" type="image/x-icon">
-  <link href="{{host}}/api/recentactivity/active/rss"
+  <link href="{{favicon}}" rel="shortcut icon" type="image/x-icon">
+  <link href="/api/recentactivity/active/rss"
         rel="alternate"
         type="application/rss+xml"
         title="News & Announcements for the Environmental Assessment Office" />
