--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -56,7 +56,7 @@
 		  this is meant to be a temporary option, strictly limited to the admin role, apis are locked to admin role.
 		  once project is loaded and running, this option can be removed.
 	    -->
-      <li class="custom-nav-item dropdown" ng-if="ADMIN_FEATURES.allowImport === 'true' && (authentication.user && authentication.user.roles.indexOf ('admin') !== -1)">
+      <li class="custom-nav-item dropdown" ng-if="'true' === ADMIN_FEATURES.allowImport && (authentication.user && authentication.user.roles.indexOf ('admin') !== -1)">
         <a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="Administration">
           <span class="glyphicon glyphicon-cog"></span>
           <span>ADMIN</span>
