Updating code to account for proper phase creation/importing.

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -253,7 +253,7 @@
 		</div>
 		<div class="detail-row">
 			<label>Status:</label>
-			<span class="value">{{ ::project.mineStatus }}</span>
+			<span class="value">{{ ::project.currentPhaseName }}</span>
 		</div>
 		<div class="detail-row">
 			<label>Region:</label>
