Organization - add in Set Primary Contact fields.

--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -141,6 +141,24 @@
 					</div>
 
 				</fieldset>
+
+				<fieldset>
+					<legend>Primary Contact</legend>
+					<div class="row">
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label class="control-label">Name</label>
+								<p class="form-control-static">{{ org.primaryContact.displayName }}</p>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="form-group">
+								<label class="control-label">Email</label>
+								<p class="form-control-static">{{ org.primaryContact.email }}</p>
+							</div>
+						</div>
+					</div>
+				</fieldset>
 			</div><!-- / DETAILS TAB CONTENT -->
 			
 			<!-- USERS TAB CONTENT -->
