--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -117,6 +117,32 @@
 
 		</fieldset>
 
+		<fieldset>
+			<legend>Primary Contact</legend>
+			<div class="row">
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label class="control-label">Name</label>
+						<p class="form-control-static">{{ org.primaryContact.displayName }}</p>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label class="control-label">Email</label>
+						<p class="form-control-static">{{ org.primaryContact.email }}</p>
+					</div>
+				</div>
+			</div>
+			<div class="form-group no-margin">
+				<button class="btn btn-default btn-sm" type="button"
+						x-user-search-chooser
+						x-title="'Set Primary Contact'"
+						x-project="project"
+						x-singleselectmode="'true'"
+						x-destination="org.primaryContact">Set Primary Contact</button>
+			</div>
+		</fieldset>
+
 		<div class="form-footer clearfix">
 			<div class="pull-right">
 				<button class="btn btn-default btn-sm" ui-sref="admin.organization.list">Cancel</button>
