--- a/modules/project-irs/client/views/ir-list.html
+++ b/modules/project-irs/client/views/ir-list.html
@@ -9,7 +9,7 @@
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left"
 				ui-sref="p.ir.create()"
-				ng-if="project.userCan.createInspectionReport">
+				ng-if="project.userCan.createComplianceOversight">
 				<span class="glyphicon glyphicon-plus"></span>
 				<span>Add Inspection</span>
 			</a>
