--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -40,7 +40,7 @@
 						<button class="btn" ng-click="removeEnforcementActionCondition(o, selected)"><span aria-hidden="true">×</span></button>
 					</li><li class="add-tag">
 						<button class="add-btn btn btn-sm"
-							ng-if="project.userCan.createInspectionReport"
+							ng-if="project.userCan.createComplianceOversight"
 							ng-click="addEditEnforcementActionCondition(selected)" type="button" title="Add Enforcement Action Conditions"><span class="glyphicon glyphicon-plus"></span>
 						</button>
 					</li>
