--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -48,8 +48,7 @@
 						<select ng-init="f.importType = defaultOption" ng-model="f.importType" class="form-control input-sm ng-pristine ng-valid ng-touched">
 							<option ng-if="environment === 'MEM'" value="/api/projects/import/mem" label="MEM Projects">MEM Projects</option>
 							<option ng-if="environment === 'MEM'" value="/api/users/import/mem" label="MEM Contacts">MEM Contacts</option>
-							<option ng-if="environment === 'MEM'" value="/api/userroles/project/import/mem" label="MEM User Roles (Project)">MEM User Roles (Project)</option>
-							<option ng-if="environment === 'MEM'" value="/api/userroles/system/import/mem" label="MEM User Roles (System)">MEM User Roles (System)</option>
+							<option ng-if="environment === 'MEM'" value="/api/userroles/import/mem" label="MEM User Roles">MEM User Roles</option>
 							<option ng-if="environment === 'EAO'" value="/api/projects/import/eao" label="EAO Projects">EAO Projects</option>
 							<option ng-if="environment === 'EAO'" value="/api/users/import/eao" label="EAO Contacts">EAO Contacts</option>
 							<option ng-if="environment === 'EAO'" value="/api/groupusers/import" label="EAO Group Contacts">EAO Group Contacts</option>
