MEM-75: remove mandatory link between Orgs and Contacts.  Use the same approach for Org->Primary Contact, Contact->Org, Project->Primary Contact, Project->Org(Proponent), allow searchable select and add in Clear mechanism too.

--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -140,6 +140,7 @@
 						x-project="project"
 						x-singleselectmode="'true'"
 						x-destination="org.primaryContact">Set Primary Contact</button>
+				<button class="btn btn-default btn-sm" type="button" ng-click="clearPrimaryContact()">Clear Primary Contact</button>
 			</div>
 		</fieldset>
 
