--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -26,6 +26,9 @@
     		<li role="presentation">
 				<a href="#orgUsers" aria-controls="profile" role="tab" data-toggle="tab">Contacts</a>
 			</li>
+			<li role="presentation">
+				<a href="#orgProjects" aria-controls="profile" role="tab" data-toggle="tab">Projects</a>
+			</li>
 		</ul>
 
 		<div class="tab-content">
@@ -181,7 +184,7 @@
 								<a  class="btn btn-default btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
 									<span class="glyphicon glyphicon-pencil"></span>
 								</a>
-								<a class="btn btn-default btn-sm" title="Remvoe User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)">
+								<a class="btn btn-default btn-sm" title="Remove User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)">
 									<span class="glyphicon glyphicon-trash"></span>
 								</a>
 							</td>
@@ -192,6 +195,48 @@
 					</table>
 				</div>
 			</div><!-- / USERS TAB CONTENT -->
+
+			<!-- Projects TAB CONTENT -->
+			<div class="tab-pane" id="orgProjects" role="tabpanel">
+				<div class="button-bar clearfix">
+					<!-- a class="btn btn-default btn-sm pull-left" ui-sref="admin.organization.user.create({orgId: org._id})">
+						<span class="glyphicon glyphicon-plus"></span><span>Add Contact</span>
+					</a -->
+					<div class="pull-right">
+						<show-filter x-toggle-filter="toggleFilter"></show-filter>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<table ng-table="projectTableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+						<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
+							<td header-class="'name-col'"
+								data-title="'Name'"
+								filter="{'name':'text'}"
+								sortable="'name'"><a ui-sref="p.detail({projectid: o.code})">{{o.name}}</a></td>
+							<td ng-if="environment === 'MEM'" data-title="'Permit'" filter="{'memPermitID':'text'}" sortable="'memPermitID'">
+								{{o.memPermitID}}
+							</td>
+							<td header-class="'type-col'"
+								data-title="'Type'"
+								sortable="'type'">{{o.type}}</td>
+							<td header-class="'region-col'"
+								data-title="'Region'"
+								sortable="'region'">{{o.region | regionName}}</td>
+							<td header-class="'phase-col'"
+								data-title="'Phase'"
+								sortable="'currentPhase.name'">{{o.currentPhase.name}}</td>
+							<td class="actions-col action-x2" header-class="'actions-col action-x2'">
+								<a class="btn btn-default btn-sm" title="Remove Project from Organization" ng-click="$event.stopPropagation();removeProjectFromOrg(o.code)">
+									<span class="glyphicon glyphicon-trash"></span>
+								</a>
+							</td>
+						</tr>
+						<tr class="no-records" ng-show="!$data || !$data.length" class="text-center">
+							<td colspan="2">No records found.</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 		</div>
 
 	</div><!-- / VIEW BODY CONTAINER -->
