Change JS file includes.  NODE_ENV=development will add all js files in the layout server view else we include the application.min.js.  NODE_ENV=development will allow live changes and debug/breakpoints.

--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -55,10 +55,10 @@
   <!--Load The Socket.io File-->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-  <!--Application JavaScript Files-->
-  {% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
-
-  <script type="text/javascript" src="/dist/application.min.js"> </script>
+  <!-- Application JavaScript Files (Library) -->
+  {% for jsFile in jsLibFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
+  <!-- Application JavaScript Files -->
+  {% for jsFile in jsAppFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
   <script type="text/javascript" src="/dist/conf.js"> </script>
 
