--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -7,7 +7,6 @@
 				</a>
 			</div>
 		</div>
-
 		<span ng-if="false">
 		<!-- \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
@@ -20,6 +19,12 @@
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 		</span>
 		<ul class="custom-nav">
+			<li ng-if="ADMIN_FEATURES.enablePrototype" class="custom-nav-item">
+				<a href ui-sref="admin.prototype.list">
+					<span class="glyphicon glyphicon-home"></span>
+					<span>PROTOTYPE</span>
+				</a>
+			</li>
 			<li class="custom-nav-item">
 				<a href ui-sref="projects">
 					<span class="glyphicon glyphicon-home"></span>
