--- a/modules/core/server/views/prototype.server.view.html
+++ b/modules/core/server/views/prototype.server.view.html
@@ -1,5 +1,5 @@
 {% extends 'prototype.layout.view.html' %}
 
 {% block content %}
-  <section ui-view class="app-main"></section>
+  <div ui-view class="app-main"></div>
 {% endblock %}
