Prototype Development - continued work on routes / mock-up data - moved styles & images to /prototype directory

--- a/modules/core/server/views/prototype.server.view.html
+++ b/modules/core/server/views/prototype.server.view.html
@@ -1,5 +1,5 @@
 {% extends 'prototype.layout.view.html' %}
 
 {% block content %}
-  <div ui-view class="app-main"></div>
+  <section ui-view class="app-main"></section>
 {% endblock %}
