--- a/modules/core/server/views/prototype.layout.view.html
+++ b/modules/core/server/views/prototype.layout.view.html
@@ -15,18 +15,19 @@
   <!-- STYLES-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <link href="/lib/base.css" rel="stylesheet" />
+  <link href="/lib/prototype/styles/prototype.css" rel="stylesheet" />
 
   <!-- SCRIPTS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-
 </head>
 
 <body class="ng-cloak">
     <header class="app-header nav-up" id="header">
-      <div class="container">MMTI</div>
+      <div class="container">
+        <a class="app-header-brand" href="/admin/prototype/project-main"><img src="/lib/prototype/images/bc_logo_transparent.png"/></a>
+      </div>
     </header>
     {% block content %}{% endblock %}
     <footer>
