--- a/modules/core/server/views/prototype.layout.view.html
+++ b/modules/core/server/views/prototype.layout.view.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-  <base href="/">
-  <title>{{title}}</title>
-  <meta name="description" content="{{description}}">
-  <meta name="fragment" content="!">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+	<base href="/">
+	<title>{{title}}</title>
+	<meta name="description" content="{{description}}">
+	<meta name="fragment" content="!">
 
-  <!-- Fav Icon -->
-  <link href="{{favicon}}" rel="shortcut icon" type="image/x-icon">
+	<!-- Fav Icon -->
+	<link href="{{favicon}}" rel="shortcut icon" type="image/x-icon">
 
-  <!-- STYLES-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <link href="/lib/prototype/styles/prototype.css" rel="stylesheet" />
+	<!-- STYLES-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi"
+		crossorigin="anonymous">
+	<link href="/lib/prototype/styles/prototype.css" rel="stylesheet" />
 
-  <!-- SCRIPTS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+	<!-- SCRIPTS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
+		crossorigin="anonymous"></script>
 
 </head>
 
 <body class="ng-cloak">
-    <header class="app-header nav-up" id="header">
-      <div class="container">
-        <a class="app-header-brand" href="/admin/prototype/project-main"><img src="/lib/prototype/images/bc_logo_transparent.png"/></a>
-      </div>
-    </header>
-    {% block content %}{% endblock %}
-    <footer>
-      <div class="container">Footer</div>
-    </footer>
+	<header class="app-header nav-up" id="header">
+		<div class="container">
+			<a class="app-header-brand" href="/admin/prototype/project-main"><img src="/lib/prototype/images/bc_logo_transparent.png" /></a>
+		</div>
+	</header>
+	{% block content %}{% endblock %}
+	<footer>
+		<div class="container">Footer</div>
+	</footer>
 
-    <!--Embedding The User Object-->
-    <script type="text/javascript">
+	<!--Embedding The User Object-->
+	<script type="text/javascript">
       var user = {{ user | json | safe }};
     </script>
 
-    <!--Load The Socket.io File-->
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	<!--Load The Socket.io File-->
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-    <!-- Application JavaScript Files (Library) -->
-    {% for jsFile in jsLibFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
-    
-    <!-- Application JavaScript Files -->
-    {% for jsFile in jsAppFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
+	<!-- Application JavaScript Files (Library) -->
+	{% for jsFile in jsLibFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
-    <script type="text/javascript" src="/dist/conf.js"> </script>
+	<!-- Application JavaScript Files -->
+	{% for jsFile in jsAppFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
-    {% if livereload %}
-    <!--Livereload script rendered -->
-    <script type="text/javascript" src="{{host}}:35729/livereload.js"></script>
-    {% endif %}
+	<script type="text/javascript" src="/dist/conf.js"> </script> {% if livereload %}
+	<!--Livereload script rendered -->
+	<script type="text/javascript" src="{{host}}:35729/livereload.js"></script> {% endif %}
 
 </body>
 
