PROTOTYPE: db call to get prototype code.

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -21,7 +21,7 @@
 		</span>
 		<ul class="custom-nav">
 			<li ng-if="ADMIN_FEATURES.enablePrototype" class="custom-nav-item">
-				<a href ui-sref="admin.prototype.list">
+				<a href ui-sref="admin.prototype.projectmain">
 					<span class="glyphicon glyphicon-home"></span>
 					<span>PROTOTYPE</span>
 				</a>
