Continued Prototype dev

--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -47,7 +47,7 @@
                 <h2>Actions</h2>
                 <section>
                     <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                        <tr ng-repeat="action in project.inspection">
+                        <tr ng-repeat="action in projectinspections">
                             <td class="id-col"
                                 header-class="'id-col'"
                                 data-title="'ID'"
