--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -45,7 +45,7 @@
             <section>
                 <h2>Inspections</h2>
                     <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                        <tr ng-repeat="inspection in project.inspections">
+                        <tr ng-repeat="inspection in projectinspections">
                             <td class="id-col"
                                 header-class="'id-col'"
                                 data-title="'ID'"
